web-britlearnacademy/Web-Site/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: britlearn-academy-site
  labels:
    app: britlearn-site
