web-britlearnacademy/Web-Site/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: britlearn-site
  namespace: britlearn-academy-site
spec:
  type: ClusterIP
  selector:
    app: britlearn-site
    slot: blue
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
