web-britlearnacademy/Web-Site/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: britlearn-site-ingress
  namespace: britlearn-academy-site
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "60"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "60"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - britlearnacademy.online
      secretName: britlearn-site-tls
  rules:
    - host: britlearnacademy.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: britlearn-site
                port:
                  number: 80
